front page - add fonts next

--- a/index.html
+++ b/index.html
@@ -8,48 +8,65 @@
     <title>Cecilia Brush</title>
 </head>
 <body>
-    <div class="sideBar">
-        <nav>
-            <input type="checkbox" name="menu" id="menu">
-            <label class="srOnly" for="menu">click to open navigation menu</label>
-            <div class="burgs">
-                <div class="burg burg1"></div>
-                <div class="burg burg2"></div>
-                <div class="burg burg3"></div>
+    <div class="wrapper">
+        <div class="sideBar">
+            <nav>
+                <input type="checkbox" name="menu" id="menu">
+                <label class="srOnly" for="menu">click to open navigation menu</label>
+                <div class="burgs">
+                    <div class="burg burg1"></div>
+                    <div class="burg burg2"></div>
+                    <div class="burg burg3"></div>
+                </div>
+                <div class="burgerContent">
+                    <nav>
+                        <ul class="topNav">
+                            <li class="home"><a href="#home">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#blog">Blog</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </nav>
+            <div class="moreNav">
+                <div class="search">
+                    <i class="fas fa-search"></i>
+                </div>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+                <div class="subscribeButton">
+                    <span>s</span>
+                    <span>u</span>
+                    <span>b</span>
+                    <span>s</span>
+                    <span>c</span>
+                    <span>r</span>
+                    <span>i</span>
+                    <span>b</span>
+                    <span>e</span>
+                </div>
             </div>
-            <div class="burgerContent">
-                <nav>
-                    <ul class="topNav">
-                        <li class="home"><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#blog">Blog</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </nav>
-        <div class="moreNav">
-            <div class="search">
-                <i class="fas fa-search"></i>
-            </div>
-            <div class="socials">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
-            <div class="subscribeButton">
-                <span>s</span>
-                <span>u</span>
-                <span>b</span>
-                <span>s</span>
-                <span>c</span>
-                <span>r</span>
-                <span>i</span>
-                <span>b</span>
-                <span>e</span>
-            </div>
+        </div>
+        <div class="siteContainer">
+            <Header>
+                <div class="heading">
+                    <h1>Cecilia</h1>
+                    <p class="srOnly">Photo of cecilia</p>
+                </div>
+                <div class="takeQuiz">
+                    <div class="container">
+                        <h2>Connect with <span>your customers</span></h2>
+                        <p>The film industry, simplified; for creatives want to convert sales</p>
+                        <button>Take the quiz</button>
+                    </div>
+                </div>                
+            </Header>
         </div>
     </div>
 </body>
