pushing to master

--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                             <div class="instaWithMe">
                                 <h4>Instagram with me!</h4>
                                 <div class="instaGrid">
-                                    <div class="imageContainer"><img src="http://www.placecage.com/192/192" alt=""></div>
-                                    <div class="imageContainer"><img src="http://www.placecage.com/192/192" alt=""></div>
-                                    <div class="imageContainer"><img src="http://www.placecage.com/192/192" alt=""></div>
+                                    <div class="imageContainer"><a href="https://www.instagram.com/cbrush.film.production/"><img src="http://www.placecage.com/192/192" alt=""></a></div>
+                                    <div class="imageContainer"><a href="https://www.instagram.com/cbrush.film.production/"><img src="http://www.placecage.com/192/192" alt=""></a></div>
+                                    <div class="imageContainer"><a href="https://www.instagram.com/cbrush.film.production/"><img src="http://www.placecage.com/192/192" alt=""></a></div>
                                 </div>
                             </div>
                             <div class="infoSocial">
