--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <div class="burgerContent">
                     <nav>
                         <ul class="topNav">
-                            <li class="home"><a href="#home">Home</a></li>
+                            <li class="home"><a href="index.html">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#blog">Blog</a></li>
@@ -204,5 +204,9 @@
             </main>
         </div>
     </div>
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js'
+        integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
