--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="burgerContent">
                     <nav>
                         <ul class="topNav">
-                            <li class="home"><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
+                            <li class="home"><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#blog">Blog</a></li>
                             <li><a href="#contact">Contact</a></li>
@@ -213,7 +213,7 @@
                             <div class="eachService">
                                 <a href="#">
                                     <div class="serviceImage courseImage">
-                                        <img class="imgUp" src="./assets/6BCB1DF4-0670-47FF-8B1D-D033B50C7715_1_201_a.jpeg" alt="">
+                                        <img class="imgUp" src="./assets/course1.png" alt="">
                                     </div>
                                     <span class="productTitle">Ebook 1</span>
                                 </a>
@@ -222,7 +222,7 @@
                             <div class="eachService">
                                 <a href="#">
                                     <div class="serviceImage courseImage">
-                                        <img class="imgUp" src="./assets/9A88957D-AE6E-479F-80CD-86312FE47AB7_1_201_a.jpeg" alt="">
+                                        <img class="imgUp" src="./assets/course2.png" alt="">
                                     </div>
                                     <span class="productTitle">Ebook 2</span>
                                 </a>
@@ -231,7 +231,7 @@
                             <div class="eachService">
                                 <a href="#">
                                     <div class="serviceImage courseImage">
-                                        <img class="imgUp" src="./assets/DBA4F749-7F0B-44D0-BA27-A0944D8AEC3F_1_201_a.jpeg" alt="">
+                                        <img class="imgUp" src="./assets/course3.png" alt="">
                                     </div>
                                     <span class="productTitle">Ebook 3</span>
                                 </a>
