most recent updates

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="sideBar">
             <nav>
-                <input type="checkbox" name="menu" id="menu">
+                <input type="checkbox" name="menu" id="menu" class="menu">
                 <label class="srOnly" for="menu">click to open navigation menu</label>
                 <div class="burgs">
                     <div id="burg1" class="burg burg1 open1"></div>
@@ -29,14 +29,14 @@
                 <div class="burgerContent">
                     <nav>
                         <ul class="topNav">
-                            <li class="home"><a href="index.html">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li class="navLink home"><a href="index.html">Home</a></li>
+                            <li class="navLink"><a href="#about">About</a></li>
+                            <li class="navLink"><a href="#services">Services</a></li>
+                            <li class="navLink"><a href="#blog">Blog</a></li>
+                            <li class="navLink"><a href="#contact">Contact</a></li>
                             <ul class="navIcons">
-                                <li><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-                                <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
+                                <li class="navLink"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                                <li class="navLink"><a href="#"><i class="fas fa-user-circle"></i></a></li>
                             </ul>
                         </ul>
                     </nav>
