--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +18,7 @@
     <div class="wrapper">
         <div class="sideBar">
             <nav>
-                <input type="checkbox" name="menu" id="menu">
+                <input type="checkbox" name="menu" id="menu" class="menu">
                 <label class="srOnly" for="menu">click to open navigation menu</label>
                 <div class="burgs">
                     <div id="burg1" class="burg burg1 open1"></div>
@@ -27,14 +29,14 @@
                 <div class="burgerContent">
                     <nav>
                         <ul class="topNav">
-                            <li class="home"><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li class="navLink home"><a href="index.html">Home</a></li>
+                            <li class="navLink"><a href="about.html">About</a></li>
+                            <li class="navLink"><a href="#services">Services</a></li>
+                            <li class="navLink"><a href="#blog">Blog</a></li>
+                            <li class="navLink"><a href="#contact">Contact</a></li>
                             <ul class="navIcons">
-                                <li><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-                                <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
+                                <li class="navLink"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                                <li class="navLink"><a href="#"><i class="fas fa-user-circle"></i></a></li>
                             </ul>
                         </ul>
                     </nav>
@@ -42,7 +44,9 @@
             </nav>
             <div class="moreNav">
                 <div class="search">
-                    <i class="fas fa-search"></i>
+                    <button id="searchModalButton" type="button" data-bs-toggle="modal" data-bs-target="#modalSearch">
+                        <i class="fas fa-search"></i>
+                    </button>
                 </div>
                 <div class="socials">
                     <div class="socialsContainer">
@@ -76,7 +80,7 @@
                     <div class="quizContainer">
                         <h2>Connect with <span>your customers</span></h2>
                         <p>The entertainment industry, simplified; <span>for creative film makers who want to convert sales.</span></p>
-                        <button class="button">Take the quiz</button>
+                        <button class="button" data-toggle="modal" data-target="#modalQuiz">Take the quiz</button>
                     </div>
                 </div>                
             </Header>
@@ -150,14 +154,14 @@
                         <div class="clientsWidget">
                             <h2><span>Happy</span><span>Clients</span></h2>
                             <div class="clientImage">
-                                <img src="http://www.placecage.com/150/150" alt="">
+                                <img id="clientPic" src="" alt="">
                             </div>
                             <div class="clientText">
-                                <p>Urna nec tincidunt praesent semper. Vestibulum mattis ullamcorper velit sed ullamcorper. Diam maecenas sed enim ut sem. Eu ultrices vitae auctor eu augue ut lectus arcu bibendum. Massa ultricies mi quis hendrerit. Ut tristique et egestas quis ipsum suspendisse ultrices gravida dictum.</p>
+                                <p id="clientText"></p>
                             </div>
-                            <p class="name"><a href="#">Nicolas</a></p>    
+                            <p id="clientName" class="name"><a href="#"></a></p>    
                             <div class="arrows">
-                            <i class="fas fa-chevron-left"></i>   <i class="fas fa-chevron-right"></i>
+                            <i id="previousClient" class="fas fa-chevron-left"></i>   <i id="nextClient" class="fas fa-chevron-right"></i>
                             </div>
                         </div>
                     </div>
@@ -305,7 +309,35 @@
         </div>
     </div>
 
-    
+    <!-- ================= -->
+    <!-- ====MODALS======= -->
+    <!-- ================= -->
+    <div class="modal fade" id="modalSearch" tabindex="-1" aria-labelledby="modalSearchLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content searchModalContent">
+                <div class="modal-header searchModalHeader">
+                    <h5 class="modal-title" id="modalSearchLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body searchModalBody">
+                    <form class="modalSearchForm" action="submit">
+                        <label class="srOnly" for="seachBar">Search Bar</label>
+                        <input class="searchInput" name="searchBar" id="searchBar" type="text" placeholder="SEARCH">
+                        <button id="searchSubmit" class="searchSubmit" type="submit"><i class="fas fa-search"></i></button>
+                    </form>
+                </div>
+                <div class="modal-footer searchModalFooter">
+                </div>
+            </div>
+        </div>
+    </div>
+
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+
+
     <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
     <script src="script.js"></script>
