most recent updates

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="container">
                         <div class="gridTime">
                             <div class="imgBox">
-                                <img class="imgUp" src="./assets/_ (2).jpeg" alt="">
+                                <img class="imgUp" src="./assets/girlPlaceholder.jpeg" alt="">
                             </div>
                             <div class="textBox">
                                 <h2>Your business <span>deserves it</span></h2>
