most recent updates

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </div>
                 <div class="takeQuiz">
                     <div class="quizContainer">
-                        <h2>Connect with <span>your customers</span></h2>
-                        <p>The entertainment industry, simplified; <span>for creative film makers who want to convert sales.</span></p>
+                        <h2>The entertainment industry, <span>simplified;</span></h2>
+                        <p>No matter where you are on your filmmaking journey I help you create quality content that sells!</p>
                         <button class="button" data-toggle="modal" data-target="#modalQuiz">Take the quiz</button>
                     </div>
                 </div>                
