most recent updates

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <img class="imgUp" src="./assets/girlPlaceholder.jpeg" alt="">
                             </div>
                             <div class="textBox">
-                                <h2>Your business <span>deserves it</span></h2>
+                                <h2>Your ideas deserve <span>to be on the big screen</span></h2>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere voluptate quis quibusdam, et nisi voluptatibus officiis sit rem distinctio vel, doloribus soluta recusandae dolor voluptatum.</p>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, sint ad vero nihil, temporibus perferendis, in consequatur voluptatibus soluta delectus laudantium odit aut id praesentium soluta porro temporibus?</p>
                                 <a href="about.html" class="button">Learn More</a>
