--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="siteContainer">
             <Header>
                 <div class="heading headingMain">
-                    <h1>Cecilia</h1>
+                    <h1><img src="./assets/cbLogoRed.png" alt=""></h1>
                     <p class="srOnly">Photo of cecilia</p>
                 </div>
                 <div class="takeQuiz">
@@ -102,8 +102,7 @@
                             </div>
                             <div class="textBox">
                                 <h2>Your ideas deserve <span>to be on the big screen</span></h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere voluptate quis quibusdam, et nisi voluptatibus officiis sit rem distinctio vel, doloribus soluta recusandae dolor voluptatum.</p>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, sint ad vero nihil, temporibus perferendis, in consequatur voluptatibus soluta delectus laudantium odit aut id praesentium soluta porro temporibus?</p>
+                                <p>Don’t know where to start or maybe you aren’t sure how to get your project to the finish line and into the sales market? I am here to help! Cecilia Brush has XXXX. Let Cecilia & her team help answer your questions and guide you through the filmmaking process.</p>
                                 <a href="about.html" class="button">Learn More</a>
                             </div>
                         </div>
