Website media dump 1

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 <div class="heading headingAbout">
                     <h1>Cecilia</h1>
                     <div class="aboutContainer">
-                        <h2>I'm so happy you are here!</h2>
+                        <h2><span style="color: #fff;display: inline;">I'm</span> so happy you are here!</h2>
                         <div class="greeting">
                             <p>Wes Anderson Tumblr you probably haven’t heard of them Brooklyn post-ironic. Echo Park Shoreditch keffiyeh keytar
                             Kickstarter biodiesel. Slow-carb biodiesel +1 retro, skateboard typewriter kitsch pork belly.</p>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="aboutImg">
                     <div class="aboutImgContainer">
-                        <img class="imgUp" src="./assets/aboutMe.jpeg" alt="">
+                        <img class="imgUp" src="./assets/CB-Bio.jpg" alt="">
                     </div>
                 </div>
             </Header>
@@ -127,7 +127,7 @@
                     </div>
                 </section>
                 <section id="workVideo" class="workVideo">
-                    <img src="http://www.placecage.com/1500/400" alt="">
+                    <img src="./assets/CB-work-BH.jpg" alt="">
                     <a class="button" href="#">Shall We Work Together?</a>
                 </section>
                 <section id="knowMe" class="knowMe">
