--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="container">
                         <div class="gridTime">
                             <div class="imgBox">
-                                <img class="imgUp" src="./assets/girlPlaceholder.jpeg" alt="">
+                                <img class="imgUp" src="./assets/CB-your-ideas.jpg" alt="">
                             </div>
                             <div class="textBox">
                                 <h2>Your ideas deserve <span>to be on the big screen</span></h2>
@@ -308,7 +308,7 @@
                 <section id="newsLetter" class="newsletter">
                     <div class="splitGrid">
                         <div class="funImage">
-                            <img src="./assets/Newsletter section.jpeg" alt="">
+                            <img src="./assets/CB-tablelay.jpg" alt="">
                         </div>
                         <div class="signUp">
                             <h2>Newsletter</h2>
